# NLOP

./: CMakeLists.txt  README.md  optimization_params.txt  stepsize_params.txt
Debug/: CMakeCache.txt  ConvexOptimization.cbp  cmake_install.cmake
data/: AdaDelta.txt  Adagrad.txt  Adam.txt  BFGS -- ARMIJO.txt  BFGS -- GoldenSection.txt  BFGS -- WOLFEPOWELL  DFP -- GoldenSection.txt  DFP -- WOLFEPOWELL.txt  Hooke Jeeves.txt  Hooke&Jeeves.txt  LevenbergMarquardt.txt  Momentum.txt  Nesterov momentum.txt  Newton.txt  RMSProp.txt  conjuate gradient -- Armijo.txt  conjuate gradient -- dichotomous.txt  conjuate gradient -- goldensection.txt  steepest descent -- Armijo.txt  steepest descent -- DICHOTOMOUS.txt  steepest descent -- WOLFEPOWELL.txt  steepest descent -- dichotomous.txt  steepest descent -- fibonacci.txt  steepest descent -- goldensection.txt
examples/: CMakeLists.txt  RosenbrockExample.cpp
include/ConstrainedOptimizer/: ConstrainedOptimizerBase.hpp
include/LineSearchMethods/: AdaDeltaOptimizer.hpp  AdagradOptimizer.hpp  AdamOptimizer.hpp  BFGS_Optimizer.hpp  ConjuateGradientOptimizer.hpp  DFP_Optimizer.hpp  HookeJeevesOptimizer.hpp  MomentumOptimizer.hpp  NesterovMomentumOptimizer.hpp  NewtonOptimizer.hpp  RMSPropOptimizer.hpp  SteepestDescentOptimizer.hpp
include/OneDimensionalSearch/: BisectionMethod.hpp  DichotomousMethod.hpp  FibonacciMethod.hpp  GoldenSectionMethod.hpp  NewtonMethod.hpp  OneDimensionalSearchMethods.hpp
include/OptimizerBase/: LineSearchOptimizer.hpp  OptimizerBase.hpp  TrustRegionOptimizer.hpp
include/OptimizerParams/: AdaDeltaParams.hpp  AdagradParams.hpp  AdamParams.hpp  BFGS_Params.hpp  ConjuateGradientParams.hpp  DFP_Params.hpp  HookeJeevesParams.hpp  LevenbergMarquardtParams.hpp  LineSearchParams.hpp  MomentumParams.hpp  NesterovMomentumParams.hpp  NewtonParams.hpp  OptimizerParamsBase.hpp  RMSPropParams.hpp  SteepestDescentParams.hpp  TrustRegionParams.hpp
include/StepsizeSearch/: StepsizeSearchBase.hpp
include/StepsizeSearch/Accurate/: AccurateSearchBase.hpp  BisectionMethod.hpp  DichotomousMethod.hpp  FibonacciMethod.hpp  GoldenSectionMethod.hpp
include/StepsizeSearch/Inaccurate/: ArmijoMethod.hpp  GoldsteinMethod.hpp  InaccurateSearchBase.hpp  WolfePowellMethod.hpp
include/StepsizeSearchParams/: AccurateSearchParams.hpp  ArmijoParams.hpp  GoldenSectionParams.hpp  GoldsteinParams.hpp  InaccurateSearchParams.hpp  StepsizeSearchParamsBase.hpp  WolfePowellParams.hpp
include/TrustRegionMethods/: LevenbergMarquardtOptimizer.hpp
include/Utils/: Constraint.hpp  Functions.hpp  Functor.hpp  Matrix.hpp  Types.hpp  Utils.hpp
plot/: plot.py
src/: main.cpp  oneDimensionalSearch.cpp  steepestDescent.cpp  utils.cpp
